# StockSimulator

./: CMakeLists.txt
src/: AlphaVantage.cpp  AlphaVantage.h  Market.cpp  Market.h  Stock.cpp  Stock.h  Utils.cpp  Utils.h  YahooFinance.cpp  YahooFinance.h  main.cpp
